2003-02-16  David Hyatt  <hyatt@apple.com>

	Fix "Almost Strict" mode to not match @konq-quirks.
	
        Reviewed by kocienda

        * ChangeLog:
        * khtml/xml/dom_docimpl.cpp:
        (DocumentImpl::DocumentImpl):
        (DocumentImpl::recalcStyleSelector):

2003-02-16  David Hyatt  <hyatt@apple.com>

	Fix to make table cells within the same table use a shared style 
	decl object (owned by the table).  This stops every cell in a table
	from having the exact same values copied on the cell itself.
	
        Reviewed by NOBODY (OOPS!).

        * khtml/css/cssstyleselector.cpp:
        * khtml/css/cssstyleselector.h:
        * khtml/html/html_tableimpl.cpp:
        (HTMLTableElementImpl::HTMLTableElementImpl):
        (HTMLTableElementImpl::~HTMLTableElementImpl):
        (HTMLTableElementImpl::createSharedCellDecls):
        (HTMLTableCellElementImpl::getAdditionalStyleDecls):
        (HTMLTableCellElementImpl::attach):
        * khtml/html/html_tableimpl.h:
        * khtml/xml/dom_elementimpl.h:

2003-02-14  David Hyatt  <hyatt@apple.com>

	Make the inline box model live.  Borders/backgrounds and text
	decorations have been rewritten.

	Also fixed a bug with clip rects.  They didn't include borders.

        Reviewed by kocienda

        * khtml/css/cssstyleselector.cpp:
        * khtml/ecma/kjs_window.cpp:
        (WindowFunc::tryCall):
        * khtml/rendering/bidi.cpp:
        * khtml/rendering/font.cpp:
        * khtml/rendering/font.h:
        * khtml/rendering/render_block.cpp:
        * khtml/rendering/render_block.h:
        * khtml/rendering/render_box.cpp:
        (RenderBox::paintBackground):
        (RenderBox::paintBackgroundExtended):
        (RenderBox::getClipRect):
        (RenderBox::position):
        * khtml/rendering/render_box.h:
        * khtml/rendering/render_flow.cpp:
        (RenderFlow::createInlineBox):
        (RenderFlow::paintLineBoxBackgroundBorder):
        (RenderFlow::paintLineBoxDecorations):